Uploaded image for project: 'Qpid'
  1. Qpid
  2. QPID-6563

[amqp1.0] broker does not clean up closed sessions or links

    XMLWordPrintableJSON

Details

    • Bug
    • Status: Closed
    • Major
    • Resolution: Fixed
    • 0.32
    • qpid-cpp-0.34
    • C++ Broker
    • None

    Description

      Due to a bug in older versions of Proton, the broker does not explicitly free sessions and links that have been closed. Rather, these objects are simply ignored until the connection itself is freed (which then frees all associated links and sessions).

      Newer versions of proton do not suffer from this bug. The broker should clean up closed links and sessions when a version of proton that does not suffer from that bug is employed.

      Attachments

        Activity

          People

            kgiusti Ken Giusti
            kgiusti Ken Giusti
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved: