QPID-6563: free sessions and links that have completely closed

git-svn-id: https://svn.apache.org/repos/asf/qpid/trunk/qpid@1683379 13f79535-47bb-0310-9956-ffa450edef68